syntax = "proto3";

package UtilService;

import   "google/api/annotations.proto";

service UtilService{

    //Schedular CRUD
    rpc DeadLinkChecker(DeadLinkTarget) returns (DeadLinkResp){
        option (google.api.http) = {
                post:"/deadChecker"
                body: "*"
        };
    }

    rpc GetDeepLink(DeepLinkReq) returns (DeepLinkResp){
        option (google.api.http) = {
                post:"/deadChecker"
                body: "*"
        };
    }
}

message DeepLinkResp{
    string deepLink = 1;
}


message DeepLinkReq{
    string board = 1;
    string packageName = 2;
}

message DeadLinkTarget{
    string source = 1;
}

message DeadLinkResp{
    bool isSuccessful = 1;
}
